generate_API_yaml/20241204152244/PCS/ContainerAPI/ifcad-atl19-vmc-step2-cad-rewrite-path-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ifcad-atl19-vmc-step2-cad-rewrite-path-ingress
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/plugins: apikey, vmc-step2-cad-acl, rewrite-path
spec:
  rules:
  - host: vmc-osb-pcs.hm.jp.honda.com
    http:
      paths:
      - backend:
          serviceName: vmccad-services-public-designcmf-apiv1
          servicePort: 80
        path: /pcs/vmccad/v1/(cmfMatchUserRole/get)
        pathType: ImplementationSpecific
      - backend:
          serviceName: vmccad-services-public-designcmf-apiv1
          servicePort: 80
        path: /pcs/vmccad/v1/(cmfMatchUserRole/search)
        pathType: ImplementationSpecific
      - backend:
          serviceName: vmccad-services-public-designcmf-apiv1
          servicePort: 80
        path: /pcs/vmccad/v1/(CMFStylingPartsList/get)
        pathType: ImplementationSpecific
      - backend:
          serviceName: vmccad-services-public-designcmf-apiv1
          servicePort: 80
        path: /pcs/vmccad/v1/(CMFInformation/get)
      - backend:
          serviceName: vmccad-services-public-designcmf-apiv1
          servicePort: 80
        path: /pcs/vmccad/v1/(releaseDrawingGroupInfoWithoutFlex/get)
      - backend:
          serviceName: vmccad-services-public-designcmf-apiv1
          servicePort: 80
        path: /pcs/vmccad/v1/(hecxFileInformationWithoutUser/search)
        pathType: ImplementationSpecific
